--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "limpeAquiApp",
+  "name": "limpeaquiapp",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -17,13 +17,15 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.0",
     "ionicons": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "typescript": "3.7.4"
+    "typescript": "3.7.4",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
